# translate_subtitles

./: .gitignore  CMakeLists.txt  colors.cpp  main.cpp  tell2_2023-02-28.  tell_2023-02-28  tell_2023-02-28.  utils.cpp  utils.h
headers/: InteractiveShell.h  Logger.h  MkvFile.h  NullBuffer.h  Vlc.h  base_utils.h  consts.h  utils.h
include/: InteractiveShell.h  MainOptions.h  NullBuffer.h  TranslatorLtrToRtl.h  Vlc.h  base_consts.h  base_utils.h  consts.h  font.h
src/: InteractiveShell.cpp  Logger.cpp  MainOptions.cpp  MkvFile.cpp  NullBuffer.cpp  TranslatorLtrToRtl.cpp  Vlc.cpp  base_consts.cpp  base_utils.cpp  consts.cpp  font.cpp  main.cpp  utils.cpp
